# agentic-red-team-framework

./: .env.example  .env.template  .gitignore  CLAUDE_CODE_PROMPT.md  DASHBOARD_CLAUDE_CODE_PROMPT - Copy.md  DASHBOARD_DESIGN_SYSTEM - Copy.md  DIAGRAMS.md  FUTURE_WORKS.md  LAB_NOTEBOOK.md  LICENSE  PROJECT_SPEC.md  README.md  claude_code_appendix_prompt.md  pyproject.toml  requirements.in  requirements.txt
.OLD/app/: main.py
.OLD/scripts/: build_poisoned_corpus.py  build_wiki_corpus.py  merge_corpora.py  run_eval.py
.OLD/tests/: conftest.py  (+1 more)
.claude/: settings.local.json
OLD/: .env.template  README.md  requirements.txt
OLD/scripts/: __init__.py  (+6 more)
app/: __init__.py  main.py
dashboard/: Home.py  README.md
data/: queries.json
docs/: EXPERIMENTATION.md  METHODOLOGY.md  RESULTS.md
notebooks/: 02_attack_dev.ipynb  03_results_analysis.ipynb  README.md
results/: summary.json
scripts/: 01_build_corpus.py  02_run_baseline.py  03_inspect_index.py  04_build_query_set.py  05_run_dryrun.py  06_run_experiments.py  07_run_clean_baseline.py  08_make_plots.py  09_migrate_verdicts.py  09_run_dashboard.ps1  09_run_dashboard.sh  _appendix_helper.py  _appendix_helper2.py
tests/: conftest.py  test_analysis.py  test_attacks.py  test_bundles.py  test_chunking.py  test_corpus.py  test_dashboard_smoke.py  test_document_loading.py  test_generator.py  test_metrics_asr.py  test_metrics_ragas.py  test_metrics_rank_shift.py  test_orchestration.py  test_pipeline.py  test_planner.py  test_rag_response_contract.py  test_retrieval.py  test_retriever.py  test_smoke.py  test_verdict.py
(+891 files in other folders)
