[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redteam"
version = "0.1.0"
description = "Agentic red-team framework for LLM-augmented search systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Emmanuel Adio" }]
dependencies = [
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "ragas>=0.2",
    "sentence-transformers>=3.0",
    "datasets>=2.20",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "tenacity>=8.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.setuptools.packages.find]
where = ["src"]
